1.23.4
- fixed every warning except some NPEs

Signed-off-by: klassenserver7b <klassenserver7bwin10@gmail.com>