@@ -13,54 +13,54 @@ import net.dv8tion.jda.api.entities.channel.middleman.GuildMessageChannel;
 
 public class VTestCommand implements ServerCommand {
 
-	private boolean isEnabled;
+    private boolean isEnabled;
 
-	@Override
-	public String getHelp() {
-		return null;
-	}
+    @Override
+    public String getHelp() {
+        return null;
+    }
 
-	@Override
-	public String[] getCommandStrings() {
-		return new String[] { "vtest" };
-	}
+    @Override
+    public String[] getCommandStrings() {
+        return new String[]{"vtest"};
+    }
 
-	@Override
-	public HelpCategories getCategory() {
-		return HelpCategories.UNKNOWN;
-	}
+    @Override
+    public HelpCategories getCategory() {
+        return HelpCategories.UNKNOWN;
+    }
 
-	@Override
-	public void performCommand(Member caller, GuildMessageChannel channel, Message message) {
+    @Override
+    public void performCommand(Member caller, GuildMessageChannel channel, Message message) {
 
-		String[] args = message.getContentDisplay().split(" ");
+        String[] args = message.getContentDisplay().split(" ");
 
-		if (args.length > 1 && !message.getMentions().getChannels().isEmpty()) {
+        if (args.length > 1 && !message.getMentions().getChannels().isEmpty()) {
 
-			GuildChannel chan = message.getMentions().getChannels().get(0);
+            GuildChannel chan = message.getMentions().getChannels().getFirst();
 
-			if (chan.getType() == ChannelType.TEXT) {
-				new Stundenplan24Vplan().sendVplanToChannel(true, args[1], (GuildMessageChannel) chan);
-			}
-		} else {
-			SyntaxError.oncmdSyntaxError(new GenericMessageSendHandler(channel), "vtest [klasse] #channel", caller);
-		}
+            if (chan.getType() == ChannelType.TEXT) {
+                new Stundenplan24Vplan().sendVplanToChannel(true, args[1], (GuildMessageChannel) chan);
+            }
+        } else {
+            SyntaxError.oncmdSyntaxError(new GenericMessageSendHandler(channel), "vtest [klasse] #channel", caller);
+        }
 
-	}
+    }
 
-	@Override
-	public boolean isEnabled() {
-		return isEnabled;
-	}
+    @Override
+    public boolean isEnabled() {
+        return isEnabled;
+    }
 
-	@Override
-	public void disableCommand() {
-		isEnabled = false;
-	}
+    @Override
+    public void disableCommand() {
+        isEnabled = false;
+    }
 
-	@Override
-	public void enableCommand() {
-		isEnabled = true;
-	}
+    @Override
+    public void enableCommand() {
+        isEnabled = true;
+    }
 
 }
