@@ -63,17 +63,13 @@ public class LoggingConfigEmbedProvider extends ListenerAdapter {
         hook = event.deferEdit().complete();
         String compId = event.getComponentId();
         String matcher = compId.replaceAll("(.*)-(\\d+)?$", "$1");
-        int optId = Integer.parseInt(event.getSelectedOptions().get(0).getValue().replace("logging-catid-", ""));
+        int optId = Integer.parseInt(event.getSelectedOptions().getFirst().getValue().replace("logging-catid-", ""));
 
         switch (matcher) {
 
-            case "logging-single-select" -> {
-                LoggingConfigDBHandler.toggleOption(LoggingOptions.byId(optId), guildId);
-            }
+            case "logging-single-select" -> LoggingConfigDBHandler.toggleOption(LoggingOptions.byId(optId), guildId);
 
-            case "logging-choose-category" -> {
-                category = LoggingOptions.byId(optId);
-            }
+            case "logging-choose-category" -> category = LoggingOptions.byId(optId);
 
             default -> {
                 return;
@@ -108,13 +104,9 @@ public class LoggingConfigEmbedProvider extends ListenerAdapter {
 
         switch (compId.split("-")[0]) {
 
-            case "disableall" -> {
-                changeCat(option, false);
-            }
+            case "disableall" -> changeCat(option, false);
 
-            case "enableall" -> {
-                changeCat(option, true);
-            }
+            case "enableall" -> changeCat(option, true);
 
             case "back" -> {
                 sendCatSelectEmbed();
@@ -155,7 +147,7 @@ public class LoggingConfigEmbedProvider extends ListenerAdapter {
 
         for (LoggingOptions option : LoggingOptions.values()) {
             if (option.getId() % 10 == 0) {
-                strbuild.append(option.toString());
+                strbuild.append(option);
                 strbuild.append(",");
                 strbuild.append("\n");
             }
@@ -191,8 +183,8 @@ public class LoggingConfigEmbedProvider extends ListenerAdapter {
 
         int idRange = category.getId();
 
-        List<Integer> catids = Arrays.asList(LoggingOptions.values()).stream()
-                .filter(opt -> (opt.getId() > idRange && opt.getId() < idRange + 10)).map(opt -> opt.getId()).toList();
+        List<Integer> catids = Arrays.stream(LoggingOptions.values())
+                .filter(opt -> (opt.getId() > idRange && opt.getId() < idRange + 10)).map(LoggingOptions::getId).toList();
 
         hook.editOriginalEmbeds(buildCatOptionsEmbed(catids)).setComponents(buildCatOptionsActionRows(catids)).queue();
     }
@@ -208,9 +200,7 @@ public class LoggingConfigEmbedProvider extends ListenerAdapter {
         StringBuilder strbuild = new StringBuilder();
         strbuild.append("Option");
 
-        for (int i = 0; i < 30; i++) {
-            strbuild.append(" ");
-        }
+        strbuild.append(" ".repeat(30));
 
         strbuild.append(" - State");
         strbuild.append("\n\n");
@@ -222,9 +212,7 @@ public class LoggingConfigEmbedProvider extends ListenerAdapter {
             strbuild.append("`");
             strbuild.append(opt.toString());
 
-            for (int i = 0; i < 30 - opt.toString().toCharArray().length; i++) {
-                strbuild.append(" ");
-            }
+            strbuild.append(" ".repeat(Math.max(0, 30 - opt.toString().toCharArray().length)));
 
             strbuild.append(" - ");
             strbuild.append("`");
@@ -282,7 +270,7 @@ public class LoggingConfigEmbedProvider extends ListenerAdapter {
 
     }
 
-    class HookTimeoutLoop implements LoopedEvent {
+    static class HookTimeoutLoop implements LoopedEvent {
 
         private final String identifier;
         private final LoggingConfigEmbedProvider listener;
